fix(dropdown): truncate text

--- a/components/src/components/dropdown/dropdown.scss
+++ b/components/src/components/dropdown/dropdown.scss
@@ -50,7 +50,14 @@
   }
 
   .sdds-dropdown-label {
+    display: grid;
     flex-grow: 2;
+  }
+
+  .sdds-dropdown-label-container {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .sdds-dropdown-filter {
